tests/lsp/text_document/snapshots/lsp__text_document__hover__citation_inside_entry.snap
---
source: tests/lsp/text_document/hover.rs
expression: "find_hover(r#\"\n%! main.bib\n@article{foo, author = {Foo Bar}, title = {Baz Qux}, year = 1337}\n          |\n         ^^^\n\n%! main.tex\n\\addbibresource{main.bib}\n\\cite{foo}\"#)"
---
{
  "kind": "markdown",
  "value": "F. Bar: \"Baz Qux\". (1337)."
}
