tests/lsp/text_document/snapshots/lsp__text_document__hover__entry_type_known_type.snap
---
source: tests/lsp/text_document/hover.rs
expression: "find_hover(r#\"\n%! main.bib\n@article{foo,}\n    |\n^^^^^^^^\"#)"
---
{
  "kind": "markdown",
  "value": "An article in a journal, magazine, newspaper, or other periodical which forms a \n self-contained unit with its own title. The title of the periodical is given in the \n journaltitle field. If the issue has its own title in addition to the main title of \n the periodical, it goes in the issuetitle field. Note that editor and related \n fields refer to the journal while translator and related fields refer to the article.\n\nRequired fields: `author`, `title`, `journaltitle`, `year/date`"
}
